Bug 516234 - Improve text comparison by using an external text viewer
- Model modifications go through model scopes
- Tool is unique and located in the Features viewer
- Double click is also supported in the Features viewer
- Sides and directions are aligned with the model comparison
- The "switch left and right view" button is hidden
- The overall aspect of the text merge dialog is slightly different
- UI strings are externalized

Change-Id: I5290e2618c49ebaa8d7be2ed614e29c06f71b43a
Signed-off-by: Olivier Constant <olivier.constant@thalesgroup.com>